# trading_bot_ppo

./: .gitignore  README.md  env_simple.py  evaluate_best_configs.py  evaluate_pro_configs.py  evaluate_with_metrics.py  optimize.py  optimize_final.py  optimize_fine.py  optimize_refined.py  paper_trading.py  paper_trading_mocked.py  pyproject.toml  requirements.txt  train_simple_ppo.py
data/: BINANCE-USDT_BRL-100_depth-1749231790356.csv  BINANCE-USDT_BRL-1_depth-1749231790335.csv  BITSO-USDT_BRL-1000_depth-1748377579082.csv  BITSO-USD_BRL-1000_depth-1748377578952.csv  BITSO-XRP_MXN-1000_depth-1748377579235.csv
models/: config_1006_8.json  config_1007_8.json
